Changed lesson 1 title

--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -2,11 +2,11 @@
 <html>
     <header>
     <title>
-        This is elon musk
+        Lesson 01 - Basic html structure
     </title>
 
     </header>
     <body>
-       uhm actually
+       Hello world
     </body>
 </html>
