--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     </header>
     <body>
         <ol>
-            <li><a href="lesson1/index.hml" target="_blank">Lesson 01 - Basic Html structure</a></li>
-            <li><a href="lesson2/index.hml" target="_blank">Lesson 02 - Basic Html style and control</a></li>
-            <li><a href="lesson3/index.hml" target="_blank">Lesson 03 - Introduction to Javascript</a></li>
-            <li><a href="lesson4/index.hml" target="_blank">Lesson 04 - Javascript output</a></li>
-            <li><a href="lesson5/index.hml" target="_blank">Lesson 05 - Javascript Statements</a></li>
-            <li><a href="lesson6/index.hml" target="_blank">Lesson 06 - Javascript Arithmetic</a></li>
+            <li><a href="lesson1/index.html" target="_blank">Lesson 01 - Basic Html structure</a></li>
+            <li><a href="lesson2/index.html" target="_blank">Lesson 02 - Basic Html style and control</a></li>
+            <li><a href="lesson3/index.html" target="_blank">Lesson 03 - Introduction to Javascript</a></li>
+            <li><a href="lesson4/index.html" target="_blank">Lesson 04 - Javascript output</a></li>
+            <li><a href="lesson5/index.html" target="_blank">Lesson 05 - Javascript Statements</a></li>
+            <li><a href="lesson6/index.html" target="_blank">Lesson 06 - Javascript Arithmetic</a></li>
           </ol>
     </body>
 </html>
