--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             li {
                 margin: 10px 10px;
             }
+            h1 {
+                text-align: center;
+            }
         </style>
     </header>
     <body>
