Added title to index page(fixed)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </style>
     </header>
     <body>
+        <h1>HTML Lessons</h1>
         <ol>
             <li><a href="lesson1/index.html" target="_blank">Lesson 01 - Basic Html structure</a></li>
             <li><a href="lesson2/index.html" target="_blank">Lesson 02 - Basic Html style and control</a></li>
