--- a/Lesson 11 - Mothers day card/index.html
+++ b/Lesson 11 - Mothers day card/index.html
@@ -20,7 +20,7 @@
         }
 
         #card {
-            background-image: url('background.png');
+            background-image: url('Background.png');
             background-repeat: no-repeat;
             background-size: 100% 100%;
             height: 90%;
