added lesson 8 and mothers and fathers day card

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <li><a href="lesson4/index.html" target="_blank">Lesson 04 - Javascript output</a></li>
             <li><a href="lesson5/index.html" target="_blank">Lesson 05 - Javascript Statements</a></li>
             <li><a href="lesson6/index.html" target="_blank">Lesson 06 - Javascript Arithmetic</a></li>
+            <li><a href="Lesson8/Index.html" target="_blank">Lesson 08 - Tables</a></li>
+            <li><a href="Lesson11 - Mothers day card/index.html" target="_blank">Mothers day card</a></li>
+            <li><a href="Lesson11 - Fathers day card/index.html" target="_blank">Fathers day card</a></li>
           </ol>
     </body>
 </html>
