--- a/Lesson11 - Fathers day card/index.html
+++ b/Lesson11 - Fathers day card/index.html
@@ -43,7 +43,7 @@
 
         .FirstP {
             margin-top: 400px;
-            margin-left: 80px; 
+            margin-left: auto; 
         }
          .SecondP{
             margin-left: 80px;
