added more code

--- a/card game/index.html
+++ b/card game/index.html
@@ -8,6 +8,10 @@
 </header>
 
 <body>
+
+    <div class="Kaidyn" data-number="123">
+        Kaidyn
+    </div>
     <div class="container">
         <div class="scoreboard">
             <button class="start-button" onclick="newGame()">Start</button>
@@ -20,15 +24,54 @@
         </div>
 
         <div class="gameBoard">
-            <!-- <div class="cardWrapper">
+            <div class="cardWrapper">
                 <div class="card" id="card-1" data-number="" data-match="false" data-flip="false">
                     <div class="card-face card-face-front"></div>
                     <div class="card-face card-face-back"></div>
                 </div>
-            </div> -->
-            <div class="card-face-front">
-
+            </div> 
+            <div class="cardWrapper">
+                <div class="card" id="card-2" data-number="" data-match="false" data-flip="false">
+                    <div class="card-face card-face-front"></div>
+                    <div class="card-face card-face-back"></div>
+                </div>
+            </div> 
+            <div class="cardWrapper">
+                <div class="card" id="card-3" data-number="" data-match="false" data-flip="false">
+                    <div class="card-face card-face-front"></div>
+                    <div class="card-face card-face-back"></div>
+                </div>
+            </div> 
+            <div class="cardWrapper">
+                <div class="card" id="card-4" data-number="" data-match="false" data-flip="false">
+                    <div class="card-face card-face-front"></div>
+                    <div class="card-face card-face-back"></div>
+                </div>
+            </div> 
+            <div class="cardWrapper">
+                <div class="card" id="card-5" data-number="" data-match="false" data-flip="false">
+                    <div class="card-face card-face-front"></div>
+                    <div class="card-face card-face-back"></div>
+                </div>
             </div>
+            <div class="cardWrapper">
+                <div class="card" id="card-6" data-number="" data-match="false" data-flip="false">
+                    <div class="card-face card-face-front"></div>
+                    <div class="card-face card-face-back"></div>
+                </div>
+            </div> 
+            <div class="cardWrapper">
+                <div class="card" id="card-7" data-number="" data-match="false" data-flip="false">
+                    <div class="card-face card-face-front"></div>
+                    <div class="card-face card-face-back"></div>
+                </div>
+            </div> 
+            <div class="cardWrapper">
+                <div class="card" id="card-8" data-number="" data-match="false" data-flip="false">
+                    <div class="card-face card-face-front"></div>
+                    <div class="card-face card-face-back"></div>
+                </div>
+            </div> 
         </div>
     </div>
 </body>
