--- a/Card Game Simple/index.html
+++ b/Card Game Simple/index.html
@@ -2,76 +2,76 @@
 <html>
 <header>
     <title>
-        Card game
+        Card Game
     </title>
+
     <link rel="stylesheet" href="styles.css">
 </header>
 
 <body>
-    <div class="container">
-        <div class="scoreboard">
-            <button class="start-button" onclick="newGame()">Start</button>
 
-            <div class="countdown">
+    <div class="container">
+        <div class="score-board">
+            <button class="new-game-button" onclick="newGame()">New game</button>
+            <div class="count-down">
                 <label id="minutes">00</label>:<label id="seconds">00</label>
-                <br />
-                <label id="totalSeconds"></label>
             </div>
         </div>
 
-        <div class="gameBoard">
-            <div class="cardWrapper">
+        <div class="game-board">
+            <div class="card-wrapper">
                 <div class="card" id="card-1" data-number="" data-match="false" data-flip="false">
                     <div class="card-face card-face-front"></div>
                     <div class="card-face card-face-back"></div>
                 </div>
-            </div> 
-            <div class="cardWrapper">
+            </div>
+            <div class="card-wrapper">
                 <div class="card" id="card-2" data-number="" data-match="false" data-flip="false">
                     <div class="card-face card-face-front"></div>
                     <div class="card-face card-face-back"></div>
                 </div>
-            </div> 
-            <div class="cardWrapper">
+            </div>
+            <div class="card-wrapper">
                 <div class="card" id="card-3" data-number="" data-match="false" data-flip="false">
                     <div class="card-face card-face-front"></div>
                     <div class="card-face card-face-back"></div>
                 </div>
-            </div> 
-            <div class="cardWrapper">
+            </div>
+            <div class="card-wrapper">
                 <div class="card" id="card-4" data-number="" data-match="false" data-flip="false">
                     <div class="card-face card-face-front"></div>
                     <div class="card-face card-face-back"></div>
                 </div>
-            </div> 
-            <div class="cardWrapper">
+            </div>
+            <div class="card-wrapper">
                 <div class="card" id="card-5" data-number="" data-match="false" data-flip="false">
                     <div class="card-face card-face-front"></div>
                     <div class="card-face card-face-back"></div>
                 </div>
             </div>
-            <div class="cardWrapper">
+            <div class="card-wrapper">
                 <div class="card" id="card-6" data-number="" data-match="false" data-flip="false">
                     <div class="card-face card-face-front"></div>
                     <div class="card-face card-face-back"></div>
                 </div>
-            </div> 
-            <div class="cardWrapper">
+            </div>
+            <div class="card-wrapper">
                 <div class="card" id="card-7" data-number="" data-match="false" data-flip="false">
                     <div class="card-face card-face-front"></div>
                     <div class="card-face card-face-back"></div>
                 </div>
-            </div> 
-            <div class="cardWrapper">
+            </div>
+            <div class="card-wrapper">
                 <div class="card" id="card-8" data-number="" data-match="false" data-flip="false">
                     <div class="card-face card-face-front"></div>
                     <div class="card-face card-face-back"></div>
                 </div>
-            </div> 
+            </div>
         </div>
     </div>
-</body>
 
-<script src="code.js"></script>
+
+    <script src="code.js"></script>
+</body>
 
 </html>
